--- a/css/votingtally.css
+++ b/css/votingtally.css
@@ -19,7 +19,7 @@
 	margin: 0;
 	padding: 0;
 }
-body .voting-tally button {
+.voting-tally button {
 	display: inline-block;
 	border: none;
 	padding: 1rem 2rem;
@@ -37,17 +37,19 @@ body .voting-tally button {
 	-moz-appearance: none;
 }
 
-body .voting-tally button:hover,
-body .voting-tally button:focus {
+.voting-tally button:hover,
+.voting-tally button:focus,
+.voting-tally button.active {
 	background: rgb(250, 250, 250);
 	border: 1px solid #EEE;
 }
 
-body .voting-tally button:focus {
+.voting-tally button:focus {
 	outline: 1px solid #fff;
 	outline-offset: -4px;
 }
 
-body .voting-tally button:active {
+.voting-tally button:active,
+.voting-tally button.active {
 	transform: scale(0.99);
 }
